<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tVd-hw-bjI">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Easy Lists-->
        <scene sceneID="DSH-qa-nUa">
            <objects>
                <tableViewController id="fVS-9B-dNW" customClass="ListsViewController" customModule="EasyLists" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="sGe-DM-1jQ">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="normal cell" id="o9R-j0-FA7" customClass="ListCell" customModule="EasyLists" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="o9R-j0-FA7" id="fY7-vC-yh8">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                                <connections>
                                    <segue destination="G4V-pY-BQp" kind="show" id="GNK-qb-M7f"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Lists"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="fVS-9B-dNW" id="AvE-dQ-W54"/>
                            <outlet property="delegate" destination="fVS-9B-dNW" id="jxT-xg-AXt"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Easy Lists" id="fP1-S1-28h">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="R6y-W2-J7m">
                            <connections>
                                <action selector="showAddDialog:" destination="fVS-9B-dNW" id="Rm1-LR-uO6"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="PP6-20-cut" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-34" y="-359"/>
        </scene>
        <!--List Items-->
        <scene sceneID="CNr-yK-kkR">
            <objects>
                <viewController id="G4V-pY-BQp" customClass="ItemsViewController" customModule="EasyLists" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="wuy-we-XdQ">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New Item Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eAx-HI-OSw">
                                <rect key="frame" x="0.0" y="64" width="375" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                <connections>
                                    <action selector="addItem:" destination="G4V-pY-BQp" eventType="primaryActionTriggered" id="uII-70-HOB"/>
                                </connections>
                            </textField>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RsK-pW-rpF">
                                <rect key="frame" x="0.0" y="94" width="375" height="573"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="item cell" id="mKf-ZT-DQs" customClass="ItemCell" customModule="EasyLists" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mKf-ZT-DQs" id="upd-ee-736">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="delegate" destination="G4V-pY-BQp" id="8bJ-5X-YlR"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstAttribute="bottom" secondItem="RsK-pW-rpF" secondAttribute="bottom" id="3J8-bi-lR3"/>
                            <constraint firstItem="eAx-HI-OSw" firstAttribute="trailing" secondItem="ycw-Ls-hdb" secondAttribute="trailing" id="67h-JH-Y2g"/>
                            <constraint firstItem="RsK-pW-rpF" firstAttribute="top" secondItem="eAx-HI-OSw" secondAttribute="bottom" id="6e3-XF-4qP"/>
                            <constraint firstItem="RsK-pW-rpF" firstAttribute="leading" secondItem="ycw-Ls-hdb" secondAttribute="leading" id="GhO-sQ-tQh"/>
                            <constraint firstItem="RsK-pW-rpF" firstAttribute="trailing" secondItem="ycw-Ls-hdb" secondAttribute="trailing" id="H3o-WL-cmf"/>
                            <constraint firstItem="eAx-HI-OSw" firstAttribute="top" secondItem="ycw-Ls-hdb" secondAttribute="top" id="c2a-Sa-8zc"/>
                            <constraint firstItem="eAx-HI-OSw" firstAttribute="leading" secondItem="ycw-Ls-hdb" secondAttribute="leading" id="ogQ-Xb-VpZ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="ycw-Ls-hdb"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="List Items" id="27o-OE-ZkD"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="tableView" destination="RsK-pW-rpF" id="g88-jg-EtM"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="3hc-fN-hq7" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="744.79999999999995" y="-359.37031484257875"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="Gn8-vM-EaD">
            <objects>
                <navigationController id="tVd-hw-bjI" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jbi-fc-GMa">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="fVS-9B-dNW" kind="relationship" relationship="rootViewController" id="17x-Yu-S2O"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="8es-Z4-eYs" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-924" y="-359"/>
        </scene>
    </scenes>
</document>
